--- a/Python tutorial/Python_DataWranglingPandas.ipynb
+++ b/Python tutorial/Python_DataWranglingPandas.ipynb
@@ -973,7 +973,528 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### _DataFrame Indexing_"
+    "##### __DataFrame Indexing__\n",
+    "\n",
+    "Pandas use the loc attribute to return one or more specified row(s)\n",
+    "\n",
+    "_loc[]: df.loc[row, column]_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 - First Row of Dataframe: \n",
+      "  user_id       BF6EA5AF\n",
+      "total play     92.851388\n",
+      "Artist        Marina Rei\n",
+      "genre                pop\n",
+      "track             Musica\n",
+      "Name: 0, dtype: object\n",
+      "\n",
+      "2 - Rows from the idex given to the last one: \n",
+      "        user_id  total play        Artist  genre      track\n",
+      "67960  26B7058C  292.455000       Red God  metal  Действуй!\n",
+      "67961  DB0038A8   11.529112  Less Chapell    pop       Home\n",
+      "67962  FE8684F6    0.100000           NaN    NaN        NaN\n",
+      "\n",
+      "3 - Cell or Value from (row, column): \n",
+      "Musica\n",
+      "\n",
+      "4 - First and Fifth rows within a list: \n",
+      "    user_id  total play                                  Artist genre   track\n",
+      "0  BF6EA5AF   92.851388                              Marina Rei   pop  Musica\n",
+      "5  4166D680    3.007000  Henry Hall & His Gleneagles Hotel Band  jazz    Home\n",
+      "\n",
+      "5 - Column of DataFrame: \n",
+      "0                        Musica\n",
+      "1                   Love Planet\n",
+      "2                   Love Planet\n",
+      "3           Loving Every Minute\n",
+      "4        Me And My Broken Heart\n",
+      "                  ...          \n",
+      "67958             Girls On Fire\n",
+      "67959                 The Model\n",
+      "67960                 Действуй!\n",
+      "67961                      Home\n",
+      "67962                       NaN\n",
+      "Name: track, Length: 67963, dtype: object\n",
+      "\n",
+      "Column of DataFrame: \n",
+      "0                        Musica\n",
+      "1                   Love Planet\n",
+      "2                   Love Planet\n",
+      "3           Loving Every Minute\n",
+      "4        Me And My Broken Heart\n",
+      "                  ...          \n",
+      "67958             Girls On Fire\n",
+      "67959                 The Model\n",
+      "67960                 Действуй!\n",
+      "67961                      Home\n",
+      "67962                       NaN\n",
+      "Name: track, Length: 67963, dtype: object\n",
+      "\n",
+      "6 - Multiple columns of DataFrame: \n",
+      "                        track        Artist\n",
+      "0                      Musica    Marina Rei\n",
+      "1                 Love Planet  Stive Morgan\n",
+      "2                 Love Planet  Stive Morgan\n",
+      "3         Loving Every Minute           NaN\n",
+      "4      Me And My Broken Heart        Rixton\n",
+      "...                       ...           ...\n",
+      "67958           Girls On Fire  Nadine Coyle\n",
+      "67959               The Model  Digital Hero\n",
+      "67960               Действуй!       Red God\n",
+      "67961                    Home  Less Chapell\n",
+      "67962                     NaN           NaN\n",
+      "\n",
+      "[67963 rows x 2 columns]\n",
+      "\n",
+      "Multiple columns of DataFrame: \n",
+      "                        track        Artist\n",
+      "0                      Musica    Marina Rei\n",
+      "1                 Love Planet  Stive Morgan\n",
+      "2                 Love Planet  Stive Morgan\n",
+      "3         Loving Every Minute           NaN\n",
+      "4      Me And My Broken Heart        Rixton\n",
+      "...                       ...           ...\n",
+      "67958           Girls On Fire  Nadine Coyle\n",
+      "67959               The Model  Digital Hero\n",
+      "67960               Действуй!       Red God\n",
+      "67961                    Home  Less Chapell\n",
+      "67962                     NaN           NaN\n",
+      "\n",
+      "[67963 rows x 2 columns]\n",
+      "\n",
+      "\n",
+      "7 - Multiple consecutive columns of DataFrame: \n",
+      "       total play        Artist    genre                   track\n",
+      "0       92.851388    Marina Rei      pop                  Musica\n",
+      "1      282.981000  Stive Morgan  ambient             Love Planet\n",
+      "2      282.981000  Stive Morgan  ambient             Love Planet\n",
+      "3        8.966000           NaN    dance     Loving Every Minute\n",
+      "4      193.776327        Rixton      pop  Me And My Broken Heart\n",
+      "...           ...           ...      ...                     ...\n",
+      "67958  220.551837  Nadine Coyle      pop           Girls On Fire\n",
+      "67959   26.127000  Digital Hero    dance               The Model\n",
+      "67960  292.455000       Red God    metal               Действуй!\n",
+      "67961   11.529112  Less Chapell      pop                    Home\n",
+      "67962    0.100000           NaN      NaN                     NaN\n",
+      "\n",
+      "[67963 rows x 4 columns]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('DataSets/music_log.csv')\n",
+    "\n",
+    "# Returns the first row of the DataFrame.\n",
+    "print(f\"1 - First Row of Dataframe: \\n{df.loc[0]}\") \n",
+    "\n",
+    "print()\n",
+    "\n",
+    "# Returns rows from the indexed to the last one\n",
+    "print(f\"2 - Rows from the idex given to the last one: \\n{df.loc[67960:]}\")\n",
+    "print()\n",
+    "\n",
+    "\n",
+    "# Returns the value of the \"track\" column in the first row or cell. loc[]: df.loc[row, column]\n",
+    "print(f\"3 - Cell or Value from (row, column): \\n{df.loc[0, \"track\"]}\") \n",
+    "\n",
+    "print()\n",
+    "\n",
+    "# Returns the first and fifth rows, within the specified list, of the DataFrame.\n",
+    "print(f\"4 - First and Fifth rows within a list: \\n{df.loc[[0,5]]}\") \n",
+    "\n",
+    "print()\n",
+    "\n",
+    "# Returns a column of the DataFrame and its abreviated notation.\n",
+    "\n",
+    "print(f'5 - Column of DataFrame: \\n{df.loc[:, \"track\"]}')\n",
+    "print()\n",
+    "print(f\"Column of DataFrame: \\n{df['track']}\")\n",
+    "print()\n",
+    "\n",
+    "# Returns multiple columns and its abreviated notation.\n",
+    "\n",
+    "print(f\"6 - Multiple columns of DataFrame: \\n{df.loc[:, ['track', 'Artist']]}\")\n",
+    "print()\n",
+    "print(f\"Multiple columns of DataFrame: \\n{df[['track', 'Artist']]}\\n\")\n",
+    "print()\n",
+    "\n",
+    "# Returns multiple consecutive columns.\n",
+    "\n",
+    "print(f\"7 - Multiple consecutive columns of DataFrame: \\n{df.loc[:, 'total play':'track']}\")\n",
+    "print()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### __DataFrame Boolean Indexing__\n",
+    "\n",
+    "In Pandas, Boolean indexing is used to filter rows or columns of a DataFrame or Series based on conditional statements. It helps extract specific data that meets the defined condition by creating boolean masks, _which are arrays of True and False values_. __The True values indicate that the respective data should be selected, while False values indicate not selected__.\n",
+    "\n",
+    "_Instead of manually iterating through data to find values that meet a condition, Boolean indexing simplifies the process by applying logical expressions._"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input DataFrame:\n",
+      "    A  B\n",
+      "0  1  2\n",
+      "1  3  4\n",
+      "2  5  6\n",
+      "\n",
+      "Boolean Index:\n",
+      "        A      B\n",
+      "0  False  False\n",
+      "1   True   True\n",
+      "2   True   True\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Create a Pandas DataFrame\n",
+    "df = pd.DataFrame([[1, 2], [3, 4], [5, 6]], columns=['A', 'B'])\n",
+    "\n",
+    "# Display the DataFrame\n",
+    "print(\"Input DataFrame:\\n\", df)\n",
+    "print()\n",
+    "\n",
+    "# Create Boolean Index\n",
+    "result = df > 2\n",
+    "\n",
+    "print('Boolean Index:\\n', result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once a boolean index is created, you can use it to filter rows or columns in the DataFrame. _This is done by using .loc[] for label-based indexing and .iloc[] for position-based indexing._"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ".loc"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_df.loc[row_condition, column_selection]_."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input DataFrame:\n",
+      "    A  B\n",
+      "0  1  2\n",
+      "1  3  4\n",
+      "2  5  6\n",
+      "\n",
+      "Output Filtered DataFrame:\n",
+      " 1    4\n",
+      "2    6\n",
+      "Name: B, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Create a Pandas DataFrame\n",
+    "df = pd.DataFrame([[1, 2], [3, 4], [5, 6]], columns=['A', 'B'])\n",
+    "\n",
+    "# Display the DataFrame\n",
+    "print(\"Input DataFrame:\\n\", df)\n",
+    "print()\n",
+    "\n",
+    "# Create Boolean Index\n",
+    "s = (df['A'] > 2)\n",
+    "\n",
+    "# Filter DataFrame using the Boolean Index with .loc\n",
+    "print('Output Filtered DataFrame:\\n',df.loc[s, 'B'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ".iloc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input DataFrame:\n",
+      "    A  B\n",
+      "0  1  2\n",
+      "1  3  4\n",
+      "2  5  6\n",
+      "Output Filtered Data:\n",
+      " 1    4\n",
+      "2    6\n",
+      "Name: B, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Create a Pandas DataFrame\n",
+    "df = pd.DataFrame([[1, 2], [3, 4], [5, 6]], columns=['A', 'B'])\n",
+    "\n",
+    "# Display the DataFrame\n",
+    "print(\"Input DataFrame:\\n\", df)\n",
+    "\n",
+    "# Create Boolean Index\n",
+    "s = (df['A'] > 2)\n",
+    "\n",
+    "# Filter data using .iloc and the Boolean Index\n",
+    "print('Output Filtered Data:\\n',df.iloc[s.values, 1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### __Advanced Boolean Indexing with multiple Conditions__\n",
+    "\n",
+    "Pandas provides more complex boolean indexing by combining multiple conditions with the operators like & (and), | (or), and ~ (not). And also you can apply these conditions across different columns to create highly specific filters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input DataFrame:\n",
+      "    A  B  C\n",
+      "0  1  5  x\n",
+      "1  3  2  y\n",
+      "2  5  8  x\n",
+      "3  7  4  z\n",
+      "\n",
+      "Output Filtered DataFrame:\n",
+      "    A  B  C\n",
+      "1  3  2  y\n",
+      "3  7  4  z\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Create a DataFrame\n",
+    "df = pd.DataFrame({'A': [1, 3, 5, 7],'B': [5, 2, 8, 4],'C': ['x', 'y', 'x', 'z']})\n",
+    "\n",
+    "# Display the DataFrame\n",
+    "print(\"Input DataFrame:\\n\", df)\n",
+    "print()\n",
+    "\n",
+    "# Apply multiple conditions using boolean indexing\n",
+    "result = df.loc[(df['A'] > 2) & (df['B'] < 5), 'A':'C']\n",
+    "\n",
+    "print('Output Filtered DataFrame:\\n',result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### __Pandas Boolean Masking__\n",
+    "\n",
+    "A boolean mask is an array of boolean values (True or False) used to filter data. It is created by applying conditional expressions to the dataset, which evaluates each element and returns True for matching conditions and False otherwise."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original DataFrame:\n",
+      "    Col1 Col2\n",
+      "0     1    A\n",
+      "1     3    B\n",
+      "2     5    A\n",
+      "3     7    C\n",
+      "4     9    A\n",
+      "\n",
+      "Filtered Data:\n",
+      "    Col1 Col2\n",
+      "2     5    A\n",
+      "4     9    A\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Create a sample DataFrame\n",
+    "df= pd.DataFrame({'Col1': [1, 3, 5, 7, 9],\n",
+    "'Col2': ['A', 'B', 'A', 'C', 'A']})\n",
+    "\n",
+    "# Display the Input DataFrame\n",
+    "print('Original DataFrame:\\n', df)\n",
+    "print()\n",
+    "\n",
+    "# Create a boolean mask\n",
+    "mask = (df['Col2'] == 'A') & (df['Col1'] > 4)\n",
+    "\n",
+    "# Apply the mask to the DataFrame\n",
+    "filtered_data = df[mask]\n",
+    "\n",
+    "print('Filtered Data:\\n',filtered_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### _Masking Data Based on Index Value_\n",
+    "\n",
+    "Filtering data based on the index values of the DataFrame can be possible by creating the mask for the index, so that you can select rows based on their position or label.\n",
+    "\n",
+    "df.isin() method to create a boolean mask based on the index labels."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original DataFrame:\n",
+      "    A1  A2\n",
+      "a  10   9\n",
+      "b  20   3\n",
+      "c  30   5\n",
+      "d  40   3\n",
+      "e  50   2\n",
+      "\n",
+      "Filtered Data:\n",
+      "    A1  A2\n",
+      "b  20   3\n",
+      "d  40   3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Create a DataFrame with a custom index\n",
+    "df = pd.DataFrame({'A1': [10, 20, 30, 40, 50], 'A2':[9, 3, 5, 3, 2]\n",
+    "}, index=['a', 'b', 'c', 'd', 'e'])\n",
+    "\n",
+    "# Dispaly the Input DataFrame\n",
+    "print('Original DataFrame:\\n', df)\n",
+    "print()\n",
+    "\n",
+    "# Define a mask based on the index\n",
+    "mask = df.index.isin(['b', 'd'])\n",
+    "\n",
+    "# Apply the mask\n",
+    "filtered_data = df[mask]\n",
+    "\n",
+    "print('Filtered Data:\\n',filtered_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### _Masking Data Based on Column Value_\n",
+    "\n",
+    "In addition to filtering based on index values, you can also filter data based on specific column values using boolean masks. The df.isin() method is used to check if values in a column match a list of values."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original DataFrame:\n",
+      "    A  B\n",
+      "0  1  a\n",
+      "1  2  b\n",
+      "2  3  f\n",
+      "\n",
+      "Filtered Data:\n",
+      "    A  B\n",
+      "0  1  a\n",
+      "2  3  f\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Create a DataFrame\n",
+    "df= pd.DataFrame({'A': [1, 2, 3],'B': ['a', 'b', 'f']})\n",
+    "\n",
+    "# Dispaly the Input DataFrame\n",
+    "print('Original DataFrame:\\n', df)\n",
+    "print()\n",
+    "\n",
+    "# Define a mask for specific values in column 'A' and 'B'\n",
+    "mask = df['A'].isin([1, 3]) | df['B'].isin(['a'])\n",
+    "\n",
+    "# Apply the mask using the boolean indexing\n",
+    "filtered_data = df[mask]\n",
+    "\n",
+    "print('Filtered Data:\\n', filtered_data)"
    ]
   }
  ],
