--- a/Python tutorial/Python_DataWranglingPandas.ipynb
+++ b/Python tutorial/Python_DataWranglingPandas.ipynb
@@ -530,6 +530,42 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When working with files in Pandas (e.g., using pd.read_csv()), you can specify the file path as either an absolute path or a relative path. Here's the difference between the two:\n",
+    "\n",
+    "_Absolute Path_\n",
+    "\n",
+    "df = pd.read_csv(r'C:\\Users\\luisp\\OneDrive\\Documentos\\GitHub\\Python-VENV\\DataSets\\music_log.csv')\n",
+    "\n",
+    "An absolute path specifies the complete path to a file or directory, starting from the root of the file system. It is independent of the current working directory of your script.\n",
+    "\n",
+    "Key Points:\n",
+    "\n",
+    "Starts from the root directory (e.g.,  on Windows or / on Linux/Mac).\n",
+    "\n",
+    "Always points to the same file, regardless of where the script is executed.\n",
+    "\n",
+    "Useful when the file location is fixed or when working with files outside the script's directory.\n",
+    "\n",
+    "\n",
+    "_Relative Path_\n",
+    "\n",
+    "df = pd.read_csv('DataSets/music_log.csv')\n",
+    "\n",
+    "A relative path specifies the location of a file relative to the current working directory (CWD) of your script. The CWD is the directory from which your script is executed.\n",
+    "\n",
+    "Key Points:\n",
+    "\n",
+    "Starts from the current working directory.\n",
+    "\n",
+    "Shorter and more portable than absolute paths.\n",
+    "\n",
+    "Depends on the current working directory. If the script is executed from a different directory, the relative path may not work.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -571,6 +607,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_.info()_\n",
+    "\n",
+    "The info() method prints information about the DataFrame.\n",
+    "\n",
+    "The information contains the number of columns, column labels, column data types, memory usage, range index, and the number of cells in each column (non-null values)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
@@ -600,6 +647,17 @@
     "df = pd.read_csv('DataSets/music_log.csv')\n",
     "\n",
     "df.info() # Displays a summary of the DataFrame, including data types and memory usage."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_.head()_\n",
+    "\n",
+    "The head() method returns a specified number of rows, string from the top.\n",
+    "\n",
+    "The head() method returns the first 5 rows if a number is not specified."
    ]
   },
   {
@@ -700,6 +758,17 @@
     "df = pd.read_csv('DataSets/music_log.csv')\n",
     "\n",
     "df.head() # Returns the first n rows (default is 5)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_.tail()_\n",
+    "\n",
+    "The tail() method returns a specified number of last rows.\n",
+    "\n",
+    "The tail() method returns the last 5 rows if a number is not specified."
    ]
   },
   {
@@ -879,6 +948,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_.describe()_\n",
+    "\n",
+    "The describe() method returns description of the data in the DataFrame.\n",
+    "\n",
+    "If the DataFrame contains numerical data, the description contains these information for each column:\n",
+    "\n",
+    "count - The number of not-empty values.\n",
+    "\n",
+    "mean - The average (mean) value.\n",
+    "\n",
+    "std - The standard deviation.\n",
+    "\n",
+    "min - the minimum value.\n",
+    "\n",
+    "25% - The 25% percentile*.\n",
+    "\n",
+    "50% - The 50% percentile*.\n",
+    "\n",
+    "75% - The 75% percentile*.\n",
+    "\n",
+    "max - the maximum value.\n",
+    "\n",
+    "*Percentile meaning: how many of the values are less than the given percentile. Read more about percentiles in our Machine Learning Percentile chapter."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 49,
    "metadata": {},
@@ -967,6 +1065,358 @@
     "df = pd.read_csv('DataSets/music_log.csv')\n",
     "\n",
     "df.describe() # Returns a summary of statistics for numerical columns. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_.add()_\n",
+    "\n",
+    "The add() method adds each value in the DataFrame with a specified value.\n",
+    "\n",
+    "The specified value must be an object that can be added to the values of the DataFrame. It can be a constant number like the one in the example, or it can be a list-like object like a list [15, 20] or a tuple {\"points\": 380, \"total\": 22}, or a  Pandas Series or another DataFrame, that fits with the original DataFrame.\n",
+    "\n",
+    "_dataframe.add(other, axis, level, fill_value)_\n",
+    "\n",
+    "Parameter\tDescription\n",
+    "\n",
+    "_other_\tRequired. A number, list of numbers, or another object with a data structure that fits with the original DataFrame.\n",
+    "\n",
+    "_axis_\tOptional, A definition that decides whether to compare by index or columns.\n",
+    "\n",
+    "_0_ or 'index' means compare by index.\n",
+    "\n",
+    "_1_ or 'columns' means compare by columns\n",
+    "\n",
+    "_level_\tOptional. A number or label that indicates where to compare.\n",
+    "\n",
+    "_fill_value_\tOptional. A number, or None. Specifies what to do with NaN values before the adding.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   points  total\n",
+      "0     115    365\n",
+      "1     135    355\n",
+      "2     129    417\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "data = {\n",
+    "  \"points\": [100, 120, 114],\n",
+    "  \"total\": [350, 340, 402]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "print(df.add(15))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_.aggregate()_\n",
+    "\n",
+    "The aggregate() method allows you to apply a function or a list of function names to be executed along one of the axis of the DataFrame, default 0, which is the index (row) axis.\n",
+    "\n",
+    "_dataframe.aggregate(func, axis, args, kwargs)_\n",
+    "\n",
+    "_func_\t \tRequired. A function, function name, or a list of function names to apply to the DataFrame.\n",
+    "\n",
+    "_axi_s\t0, 1, 'index', 'columns' Optional, Which axis to apply the function to. default 0.\t\n",
+    "\n",
+    "args\t \tOptional, arguments to send into the function\n",
+    "\n",
+    "kwargs\t \tOptional, keyword arguments to send into the function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       x     y\n",
+      "sum  120  1454\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "data = {\n",
+    "  \"x\": [50, 40, 30],\n",
+    "  \"y\": [300, 1112, 42]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "x = df.aggregate([\"sum\"])\n",
+    "\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_.concat()_\n",
+    "\n",
+    "The concat() method in Pandas is a powerful function used to concatenate (combine) multiple DataFrames or Series along a particular axis. It has several arguments that allow you to customize how the concatenation is performed.\n",
+    "\n",
+    "_dataframe.concat(objs, axis=0, join='outer', ignore_index=False, keys=None, levels=None, names=None, verify_integrity=False, sort=False, copy=True)_\n",
+    "\n",
+    "_objs_ A list or dictionary of DataFrames or Series to concatenate. Required\n",
+    "\n",
+    "_axis_ Specifies whether to concatenate along rows (axis=0) or columns (axis=1). axis=0: Combines rows (default behavior). axis=1: Combines columns side by side. Default(0)\n",
+    "\n",
+    "_ingnore_index_ If True, resets the index in the resulting DataFrame to a continuous range starting from 0. If False, retains the original indices from the input DataFrames. Default(False)\n",
+    "\n",
+    "_join_ Specifies how to handle columns that are not present in all DataFrames: 'outer': Includes all columns (union of columns). 'inner': Includes only common columns (intersection of columns). Default(outer)\n",
+    "\n",
+    "_keys_ Adds a hierarchical index (MultiIndex) to the resulting DataFrame, with labels for each DataFrame being concatenated. Default(none)\n",
+    "\n",
+    "_levels_ Used with keys to specify custom levels for the hierarchical index. Default(none)\n",
+    "\n",
+    "_names_ Assigns names to the levels of the hierarchical index created by keys. Default(none)\n",
+    "\n",
+    "_verify_integrity_ If True, checks for duplicate indices in the resulting DataFrame and raises an error if duplicates are found. Default(None)\n",
+    "\n",
+    "_sort_ If True, sorts the columns in the resulting DataFrame. Default(False)\n",
+    "\n",
+    "_copy_ If True, creates a copy of the data. If False, avoids unnecessary data copying (may improve performance). Default(True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   age  qualified\n",
+      "0   16       True\n",
+      "1   14       True\n",
+      "2   10       True\n",
+      "3   55       True\n",
+      "4   40      False\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "data1 = {\n",
+    "  \"age\": [16, 14, 10],\n",
+    "  \"qualified\": [True, True, True]\n",
+    "}\n",
+    "df1 = pd.DataFrame(data1)\n",
+    "\n",
+    "data2 = {\n",
+    "  \"age\": [55, 40],\n",
+    "  \"qualified\": [True, False]\n",
+    "}\n",
+    "df2 = pd.DataFrame(data2)\n",
+    "\n",
+    "newdf = pd.concat([df1, df2], ignore_index=True)\n",
+    "\n",
+    "print(newdf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_.count()_\n",
+    "\n",
+    "The count() method counts the number of not empty values for each row, or column if you specify the axis parameter as axis='columns', and returns a Series object with the result for each row (or column).\n",
+    "\n",
+    "_dataframe.count(axis, level, numeric_only)_\n",
+    "\n",
+    "_axis_\t0 1 'index' 'columns'\tOptional, Which axis to check, default 0.\n",
+    "\n",
+    "_level_\tNumber level name\tOptional, Specifies which level ( in a hierarchical multi index) to count along\n",
+    "\n",
+    "_numeric_only_\t'True' 'False'\tOptional, Default False, set to true if the count method should only count numeric values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Duration    4\n",
+      "Pulse       6\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "data = {\n",
+    "  \"Duration\": [50, 40, None, None, 90, 20],\n",
+    "  \"Pulse\": [109, 140, 110, 125, 138, 170]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "print(df.count())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_.drop_duplicates()_\n",
+    "\n",
+    "The drop_duplicates() method removes duplicate rows.\n",
+    "\n",
+    "Use the subset parameter if only some specified columns should be considered when looking for duplicates.\n",
+    "\n",
+    "_dataframe.drop_duplicates(subset, keep, inplace, ignore_index)_\n",
+    "\n",
+    "_subset_\tcolumn label(s)\tOptional. A String, or a list, containing the columns to use when looking for duplicates. If not specified, all columns are being used.\n",
+    "\n",
+    "_keep_\t'first' 'last' False\tOptional, default 'first'. Specifies which duplicate to keep. If False, drop ALL duplicates\n",
+    "\n",
+    "_inplace_\tTrue False\tOptional, default False. If True: the removing is done on the current DataFrame. If False: returns a copy where the removing is done.\n",
+    "\n",
+    "_ignore_index_\tTrue False\tOptional, default False. Specifies whether to label the 0, 1, 2 etc., or not"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    name  age  qualified\n",
+      "0  Sally   50       True\n",
+      "1   Mary   40      False\n",
+      "2   John   30      False\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "data = {\n",
+    "  \"name\": [\"Sally\", \"Mary\", \"John\", \"Mary\"],\n",
+    "  \"age\": [50, 40, 30, 40],\n",
+    "  \"qualified\": [True, False, False, False]\n",
+    "}\n",
+    "\n",
+    "df = pd.DataFrame(data)\n",
+    "\n",
+    "newdf = df.drop_duplicates()\n",
+    "\n",
+    "print(newdf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "_.dropna()_\n",
+    "\n",
+    "The dropna() method removes the rows that contains NULL values.\n",
+    "\n",
+    "The dropna() method returns a new DataFrame object unless the inplace parameter is set to True, in that case the dropna() method does the removing in the original DataFrame instead.\n",
+    "\n",
+    "_dataframe.dropna(axis, how, thresh, subset, inplace)_\n",
+    "\n",
+    "_axis_\t0 1 'index' 'columns'\tOptional, default 0. 0 and 'index'removes ROWS that contains NULL values. 1 and 'columns' removes COLUMNS that contains NULL values\n",
+    "_how_\t'all' 'any'\tOptional, default 'any'. Specifies whether to remove the row or column when ALL values are NULL, or if ANY value is NULL.\n",
+    "_thresh_\tNumber\tOptional, Specifies the number of NOT NULL values required to keep the row.\n",
+    "_subset_\tList\tOptional, specifies where to look for NULL values\n",
+    "_inplace_\tTrue False\tOptional, default False. If True: the removing is done on the current DataFrame. If False: returns a copy where the removing is done."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          date group  visitors\n",
+      "0   01/04/2019     A     455.0\n",
+      "2   03/04/2019     A    1313.0\n",
+      "3   04/04/2019     A     555.0\n",
+      "4   05/04/2019     A     564.0\n",
+      "5   06/04/2019     A     467.0\n",
+      "6   07/04/2019     A     513.0\n",
+      "7   08/04/2019     A     559.0\n",
+      "8   09/04/2019     A     575.0\n",
+      "9   10/04/2019     A    1322.0\n",
+      "11  12/04/2019     A     804.0\n",
+      "12  13/04/2019     A     626.0\n",
+      "13  14/04/2019     A     679.0\n",
+      "14  15/04/2019     A     557.0\n",
+      "15  16/04/2019     A     365.0\n",
+      "16  17/04/2019     A     509.0\n",
+      "17  18/04/2019     A     788.0\n",
+      "18  19/04/2019     A     724.0\n",
+      "20  21/04/2019     A     733.0\n",
+      "21  22/04/2019     A     707.0\n",
+      "22  23/04/2019     A     882.0\n",
+      "23  01/04/2019     B     464.0\n",
+      "24  02/04/2019     B     513.0\n",
+      "25  03/04/2019     B    1313.0\n",
+      "26  04/04/2019     B     578.0\n",
+      "28  06/04/2019     B     470.0\n",
+      "29  07/04/2019     B     505.0\n",
+      "30  08/04/2019     B     573.0\n",
+      "31  09/04/2019     B     564.0\n",
+      "32  10/04/2019     B    1334.0\n",
+      "33  11/04/2019     B     570.0\n",
+      "34  12/04/2019     B     819.0\n",
+      "36  14/04/2019     B     675.0\n",
+      "37  15/04/2019     B     559.0\n",
+      "38  16/04/2019     B     364.0\n",
+      "39  17/04/2019     B     522.0\n",
+      "40  18/04/2019     B     758.0\n",
+      "41  19/04/2019     B     715.0\n",
+      "42  20/04/2019     B     666.0\n",
+      "43  21/04/2019     B     725.0\n",
+      "45  23/04/2019     B     857.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('DataSets/orders_for_anomalies_detection_visitors.csv')\n",
+    "\n",
+    "newdf = df.dropna()\n",
+    "print(newdf)"
    ]
   },
   {
@@ -1458,7 +1908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
