--- a/Python tutorial/Python_DataWranglingPandas.ipynb
+++ b/Python tutorial/Python_DataWranglingPandas.ipynb
@@ -2784,7 +2784,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### _Masking Data Based on Index Value_\n",
+    "##### __Masking Data Based on Index Value__\n",
     "\n",
     "Filtering data based on the index values of the DataFrame can be possible by creating the mask for the index, so that you can select rows based on their position or label.\n",
     "\n",
